force-app/main/default/objects/CventEvents__AttendeeActivity__c/fields/CventEvents__ActivityStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ActivityStub__c</fullName>
    <externalId>true</externalId>
    <label>Activity Stub</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>