force-app/main/default/objects/CventEvents__AttendeeActivity__c/fields/CventEvents__Details__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Details__c</fullName>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>