force-app/main/default/objects/CventEvents__AttendeeActivity__c/fields/CventEvents__Group__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Group__c</fullName>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>