force-app/main/default/objects/CventEvents__AttendeeActivity__c/fields/CventEvents__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ObjectName__c</fullName>
    <description>Contains name of the related entity.</description>
    <inlineHelpText>Contains name of the related entity.</inlineHelpText>
    <label>Related Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>