force-app/main/default/objects/CventEvents__AttendeeActivity__c/fields/CventEvents__ObjectStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ObjectStub__c</fullName>
    <description>Contains Cvent stub of the related entity.</description>
    <externalId>true</externalId>
    <inlineHelpText>Contains Cvent stub of the related entity.</inlineHelpText>
    <label>Object Stub</label>
    <length>36</length>
    <type>Text</type>
</CustomField>