force-app/main/default/objects/CventEvents__AttendeeActivity__c/fields/CventEvents__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ObjectType__c</fullName>
    <description>Contains type of the related entity.</description>
    <inlineHelpText>Contains type of the related entity.</inlineHelpText>
    <label>Related Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>