force-app/main/default/objects/CventEvents__AttendeeActivity__c/fields/CventEvents__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Timestamp__c</fullName>
    <label>Activity Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>