force-app/main/default/objects/CventEvents__AttendeeActivity__c/fields/CventEvents__Type__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>